# Kizuna

./: README.md  eslint.config.mjs  eslint.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: build.yml
src/: App.vue
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/libs/: commands.rs  create_config.rs  report.rs
src-tauri/src/modules/: get_config.rs  get_media.rs  get_smtc.rs  icon_converter.rs  logs.rs  mod.rs  requests.rs  upload_cover.rs
src/components/: Sidebar.vue
src/layouts/: Home.vue  ServerLogs.vue  Setting.vue
